change bg color

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
               mono: ['JetBrains Mono', 'monospace'],
             },
             colors: {
-              background: '#0f172a', // Slate 900
-              primary: '#6366f1', // Indigo 500
+              background: '#0f172a',
+              primary: '#145A7C',
             },
             animation: {
               'pulse-glow': 'pulseGlow 8s ease-in-out infinite',
